Adjusted padding to prevent dot overlap

--- a/Whiscode/Whiscode/ClientApp/src/app/sections/sections.component.scss
+++ b/Whiscode/Whiscode/ClientApp/src/app/sections/sections.component.scss
@@ -48,7 +48,7 @@
 
     &.right {
       .content {
-        padding-right: 40px;
+        padding-right: 50px;
       }
     }
 
